--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <title>Octo Waggle!</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Scope+One&display=swap" rel="stylesheet">    <title>Octo Waggle!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
